# ATLAS

./: .gitignore  ATLAS_SYSTEM_DOCS.py  GOOSE_LOGGING_FLOW.md  INTELLIGENT_REFACTORING_COMPLETE.md  PHASE2_COMPLETION_REPORT.md  README.md  README_ATLAS.md  REFACTOR_PLAN.md  apply_context_optimization.sh  atlas_backend.py  atlas_prompts.py  atlas_web_server.py  chat.md  check_status.sh  config.yaml  debug_input.html  diagnose.sh  diagnose_context.sh  intelligent_config.json  kill_atlas_optimized.sh  logic.md  monitor.sh  multmod.md  recover.sh  reset_stack.sh  restart_stack.sh  start_atlas.sh  start_atlas_fast.sh  start_atlas_optimized.sh  start_atlas_v2.sh  start_frontend_only.sh  start_stack.sh  start_stack_intelligent.sh  start_stack_macos.sh  status_stack.sh  status_stack_intelligent.sh  stop_atlas.sh  stop_stack.sh  test_fixes.html  test_goose_connection.py  (+7 more)
.github/: dependabot.yml
DOCS/: CI_CD_INFRASTRUCTURE.md  calculation_result.txt  sqrt64_result.txt  sqrt_64_result.txt
arhiv/: SCRIPTS_README.md  build_atlas.sh  kill_atlas.sh  start_atlas_optimized.sh  test_blocking_detailed.py  test_input_fix.html  test_input_fix.py
fallback_llm/: server.js  start_fallback.sh
frontend/: atlas_minimal_debug.py  atlas_minimal_live.py  atlas_minimal_live_backup.py  atlas_simple.py  atlas_working.py  index.html  requirements.txt  test_atlas_stream_fix.py
frontend_backup_20250831_1/: run_goose_cli.sh  session_management_concept.md  setup_env.sh  (+2 more)
goose/crates/mcp-tts-ukrainian/: Cargo.toml  mcp_tts_fixed.py
goose/crates/mcp-tts-ukrainian/src/: lib.rs  main.rs  router.rs
(+289 files in other folders)
