[package]
name = "mcp-tts-ukrainian"
version = "0.1.0"
edition = "2021"
description = "Ukrainian TTS MCP Server for Goose"
authors = ["Atlas AI Team"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0.94"
thiserror = "1.0"
mcp-core = { path = "../mcp-core" }
mcp-server = { path = "../mcp-server" }
rmcp = { workspace = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout"] }
tower-service = "0.3"
futures = "0.3"
pin-project = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dependencies.pyo3]
version = "0.22"
features = ["auto-initialize"]

[[bin]]
name = "mcp-tts-ukrainian"
path = "src/main.rs"
